# moon-rabbit

./: .gitignore  CLAUDE.md  LICENSE  Pipfile  Pipfile.lock.bak  README.md  check.sh  commands.py  control_commands.py  data.py  deploy.sh  discord_client.py  ecosystem.config.cjs  import.py  main.py  notifier.py  pg_backup.sh  playbooks.md  pyproject.toml  query.py  requirements-dev.txt  requirements.txt  restart.sh  schema_backup.sql  scheme.sql  server_twitch_auth.py  setup.md  storage.py  templates.py  todos.md  twitch.py  twitch_api.py  twitch_auth.py  twitch_bot.py  twitch_client.py  twitch_commands.py  word_processing.py  words.py
.agent/rules/: common.md
.claude/commands/: diagnose.md
commands/: __init__.py  builtins.py  pipeline.py  text.py
docs/: agent_review_recommendations.md  architecture.md  file_reference.md  fixes.md  implementation_plan.md  log.md  migration_log.md  overview.md
tests/: conftest.py  test_commands.py  test_data.py  test_db_resilience.py  test_notifier.py  test_templates.py  test_twitch_message_building.py  test_twitch_send.py
