[project]
name = "moon-rabbit"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio-throttle>=1.0.2",
    "cachetools>=5.3.0",
    "dacite>=1.8.0",
    "discord>=2.2.3",
    "jinja2>=3.1.2",
    "lark>=1.1.5",
    "llist>=0.7.1",
    "numpy>=1.24.3",
    "pillow>=9.5.0",
    "psycopg2-binary>=2.9.11",
    "pymorphy3>=1.3.1",
    "pymorphy3-dicts-ru>=2.4.417150.4580142",
    "python-dotenv>=1.2.2",
    "setuptools>=75.8.2",
    "ttldict2>=0.1.1",
    "twitchio>=3.2.1",
]

[dependency-groups]
dev = [
    "black>=23.3.0",
    "mypy>=1.2.0",
    "pytest>=9.0.2",
]
