[project]
name = "moon-rabbit"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio-throttle>=1.0.2",  # request throttling
    "cachetools>=5.3.0",  # caching
    "dacite>=1.8.0",  # init class from dict
    "discord>=2.2.3",  # discord api
    "jinja2>=3.1.2",  # templating
    "lark>=1.1.5",  # language parsing
    "llist>=0.7.1",  # linked list for non-unified diffs
    "numpy>=1.24.3",
    "pillow>=9.5.0",  # image manipulations
    "psycopg2-binary>=2.9.11",  # postgres
    "pymorphy3>=1.3.1",  # auto-generation of russian morphems (maintained fork of pymorphy2)
    "pymorphy3-dicts-ru>=2.4.417150.4580142",  # russian dictionary for pymorphy3
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
    "setuptools>=75.8.2",  # required by pymorphy3 (pkg_resources)
    "ttldict2>=0.1.1",  # caching
    "twitchio>=3.2.1",  # twitch chat + EventSub (replaces twitchio 2.x + twitchapi)
]

[dependency-groups]
dev = [
    "black>=23.3.0",
    "pytest>=9.0.2",
    "ruff>=0.3.0",
    "deptry>=0.14.0",
    "types-requests>=2.31.0",
    "ty>=0.0.1",
]

[tool.deptry.per_rule_ignores]
DEP002 = ["cachetools", "pymorphy3-dicts-ru", "setuptools"]

[tool.deptry.package_module_name_map]
pillow = "PIL"
psycopg2-binary = "psycopg2"
python-dotenv = "dotenv"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# F403: 'from module import *' used; unable to detect undefined names
# F405: Name may be undefined, or defined from star imports
# E402: Module level import not at top of file
# ignore = ["F403", "F405", "E402"]

