[project]
name = "moon-rabbit"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio-throttle",  # request throttling
    "cachetools",  # caching
    "dacite",  # init class from dict
    "discord",  # discord api
    "dawg-python", # dependency for pymorphy3
    "jinja2",  # templating
    "lark",  # language parsing
    "llist",  # linked list for non-unified diffs
    "numpy",
    "pillow",  # image manipulations
    "psycopg2-binary",  # postgres
    "pymorphy3",  # auto-generation of russian morphems (maintained fork of pymorphy2)
    "pymorphy3-dicts-ru",  # russian dictionary for pymorphy3
    "python-dotenv",
    "requests",
    "setuptools",  # required by pymorphy3 (pkg_resources)
    "ttldict2",  # caching
    "twitchio",  # twitch chat + EventSub (replaces twitchio 2.x + twitchapi)
]

[dependency-groups]
dev = [
    "black",
    "pytest",
    "ruff",
    "deptry",
    "types-requests",
    "ty",
]

[tool.deptry.per_rule_ignores]
DEP002 = ["cachetools", "pymorphy3-dicts-ru", "setuptools"]

[tool.deptry.package_module_name_map]
pillow = "PIL"
psycopg2-binary = "psycopg2"
python-dotenv = "dotenv"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# F403: 'from module import *' used; unable to detect undefined names
# F405: Name may be undefined, or defined from star imports
# E402: Module level import not at top of file
# ignore = ["F403", "F405", "E402"]

